--- a/soft_hand_ros_control/CMakeLists.txt
+++ b/soft_hand_ros_control/CMakeLists.txt
@@ -23,6 +23,14 @@ find_package(catkin REQUIRED COMPONENTS
 ## This assumes you cloned recursively to get he qbAPI sources
 SET(HAND_TOOLS ../hand-tools/qbAPI)
 
+add_service_files(FILES
+  setControlMode.srv
+)
+
+generate_messages(DEPENDENCIES
+  std_msgs
+)
+
 catkin_package(
     INCLUDE_DIRS include
     LIBRARIES iit_hand_hw fake_hand_hw
