--- a/gazebo_ros_soft_hand/CMakeLists.txt
+++ b/gazebo_ros_soft_hand/CMakeLists.txt
@@ -23,7 +23,7 @@ find_package(catkin REQUIRED COMPONENTS
 # Depend on system install of Gazebo 
 find_package(gazebo REQUIRED)
 find_package(Boost REQUIRED)
-find_package(Eigen3 REQUIRED)
+find_package(Eigen REQUIRED)
 
 link_directories(${GAZEBO_LIBRARY_DIRS})
 include_directories(include
