--- a/soft_hand_ros_control/config/controllers.yaml
+++ b/soft_hand_ros_control/config/controllers.yaml
@@ -6,11 +6,11 @@
 
       joint_position_controller:
         type: position_controllers/JointPositionController
-        joint: soft_hand_synergy_joint
+        joint: right_hand_synergy_joint
 
       joint_trajectory_controller:
         type: position_controllers/JointTrajectoryController
         joints: 
-          - soft_hand_synergy_joint
+          - right_hand_synergy_joint
       stiffness: 1.0
       deadband: 0.0
